Formatting of impl code using Jakarta EE formatting rules
Signed-off-by: arjantijms <arjan.tijms@gmail.com>